// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Akta it should render generator components 1`] = `
<body>
  <div
    id="app"
  >
    <div>
      <div>
        <p>
          State 2
        </p>
        <button>
          Next
        </button>
      </div>
    </div>
  </div>
</body>
`;

exports[`Akta it should render generator components 2`] = `
<body>
  <div
    id="app"
  >
    <div>
      <p>
        State 3
      </p>
    </div>
  </div>
</body>
`;

exports[`Akta should handle css props with media queries properly 1`] = `
<body>
  <div
    id="app"
  >
    <div>
      <p
        class="c0 c1 c2"
        id="daniel"
        style="height: 100vh; width: 100vw;"
      />
    </div>
  </div>
</body>
`;

exports[`Akta should handle css props with media queries properly 2`] = `
".c0 {background-color: red;}
(min-width: 100px)
.c1 {background-color: blue;}
(max-width: 500px) and (min-width: 200px)
.c2 {background-color: green;}"
`;
